--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,7 +26,7 @@
         <% } %>
 
         <% if (locals.error) { %>
-            <div class="weather-result">
+            <div class="error-message">
                 <p><%= error %></p>
             </div>
         <% } %>
